# mash

./: .gitignore  my_vertex_config.json  pyproject.toml
outputs/: vertex_test.json  vertex_test.json.dry_run_prompts.md
src/benchmark/: benchmark_runner.py  config.py  dry_run.py  eval_cli.py  metrics_cim.py  model_client.py  prompts.py  provider_registry.py  types.py  utils.py  work_planner.py
src/benchmark/datasets/: __init__.py  cim.py  persistbench.py
src/benchmark/execution/: judgment.py
src/benchmark/providers/: vertexai_batch.py
tests/: test_cim_parser.py
